@@ -14,8 +14,10 @@ class JediDatasetSpec(object):
     def __str__(self):
         sb = []
         for key in self.__dict__:
-            sb.append("{key}='{value}'".format(key=key, value=self.__dict__[key]))
-    
+            if key == 'Files':
+                sb.append("{key}='{value}'".format(key=key, value=len(self.__dict__[key])))
+            else:
+                sb.append("{key}='{value}'".format(key=key, value=self.__dict__[key]))
         return ', '.join(sb)
     
     def __repr__(self):
